syntax = "proto3";
package evm_messages;

import "evm/block_message.proto";

message TokenInfo {
  bytes SmartContract = 1;
  bool  Delegated = 2;
  bytes DelegatedTo = 3;
  string ProtocolName = 4;
  string Name = 5;
  string Symbol = 6;
  int32  Decimals = 7;
  bool   HasURI = 8;
  bool   Fungible = 9;
  string  AssetId = 10;
}

message TokenTransfer {
  uint64 TransactionIndex = 1 [deprecated = true];
  uint64 CallIndex = 2;
  uint64 LogIndex = 3;

  bytes  Sender = 4;
  bytes  Receiver = 5;

  bytes  Amount = 6;
  bytes  Id = 7;
  string URI = 8;

  TokenInfo Currency = 9;
  bool Success = 10;
  bytes Data = 12;
  uint32 Index = 13;

  TransactionHeader TransactionHeader = 14;
}

message TransactionBalanceUpdate {
  TransactionHeader TransactionHeader = 1;
  repeated BalanceUpdate BalanceUpdates = 2;
}

message BalanceUpdate {
  TokenInfo Currency = 1;
  bytes PreBalance = 2;
  bytes PostBalance = 3;
  BalanceUpdateReason Reason = 4;
}

message TokenBlockMessage {
  Chain Chain = 1;
  BlockHeader Header = 2;
  repeated TokenTransfer Transfers = 5;
  optional BlockHeader L1Header = 6;
  repeated BalanceUpdate BlockBalanceUpdates = 7;
  repeated TransactionBalanceUpdate TransactionBalanceUpdates = 8;
}


